# KadeAI

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ci.yml  crypto.py  forensics.py  main.py  pyproject.toml  requirements.txt  reversing.py  server.py  utils.py  web.py
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  usage.md
kadeai/: __init__.py  agent.py  config.py
kadeai/modules/: __init__.py  incident_response.py  osint.py  report_generator.py  threat_intel.py  vuln_scanner.py
kadeai/utils/: __init__.py  formatter.py  logger.py
scripts/: setup.sh
tests/: test_modules.py
tools/: crypto.py  forensics.py  reversing.py  utils.py  web.py
