[project]
name = "kademcp"
version = "0.2.0"
description = "CTF Solver MCP Server — gives Claude hands-on CTF tools via the Model Context Protocol"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pycryptodome>=3.20.0",
    "sympy>=1.13.0",
    "pwntools>=4.13.0",
]

[project.scripts]
kademcp = "server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by black if desired
    "F841",  # local variable assigned but never used (common in CTF scripts)
]
